Bug 439287 - Home view is missing styling
Summary: Home view is missing styling
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1.2
Platform: macOS (DMG) macOS
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-29 07:16 UTC by Dawid Wróbel
Modified: 2021-06-29 07:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dawid Wróbel 2021-06-29 07:16:54 UTC
SUMMARY
Home view is missing styling on macOS builds
Comment 1 Dawid Wróbel 2021-06-29 07:22:00 UTC
Git commit 169bfd44c202496de108629bb81fe1b6aed8aaf6 by Dawid Wróbel.
Committed on 29/06/2021 at 07:17.
Pushed by wrobelda into branch '5.1'.

Fix loading and saving CSS styles on macOS
FIXED-IN: 5.1.3

M  +15   -1    kmymoney/kmymoney.cpp

https://invent.kde.org/office/kmymoney/commit/169bfd44c202496de108629bb81fe1b6aed8aaf6