Fix loading and saving CSS styles on macOS

BUG: 439287
FIXED-IN: 5.1.3